--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -43,7 +43,7 @@
         <div class="card-body">
 
           <div class="pt-6 pb-2">
-            <h5 class="card-title text-center pb-0 fs-4">Register devices</h5>
+            <h5 class="card-title text-center pb-0 fs-4">Usody Metadata Snapshots</h5>
             <div class="row pt-3">
               <div class="col-5">
                 <a href="{{ iso.demo.url }}{{ iso.demo.iso }}" class="btn btn-primary">{{ iso.demo.iso }}</a>
@@ -142,35 +142,32 @@
 
 
 
-    <div class="col-xl-6">
+    <div class="col">
 
       <div class="card">
         <div class="card-body">
 
           <div class="pt-6 pb-2">
-            <h5 class="card-title pb-0 fs-4">Register devices</h5>
+            <h5 class="card-title pb-0 fs-4">Usody Metadata Snapshots</h5>
 
             <div class="row">
-              <div class="col-5">
+              <div class="col-2">
                 <a href="" class="btn btn-primary" style="width: 200px;">Download ISO</a>
               </div>
-              <div class="col">
+              <div class="col-3">
                 <p class="small">
                   Download Checksum: <a class="help" href="SHA512SUM">SHA512SUM</a> |
                   <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a></p>
                 </p>
               </div>
+              <div class="col"></div>
             </div>
 
             <div class="row mt-3">
-              <div class="col-4 border">
-                <div class="row">
+              <div class="col-3">
+                <div class="border mr-2 p-2">
                   <p>HW and Smart test</p>
-                </div>
-                <div class="row">
-                  <div class="col-12 mb-2">
-                    <a href="{{ url_for('workbench.settings') }}?opt=erease_sectors" class="btn btn-primary" style="width: 100%">Download settings file</a>
-                  </div>
+                  <a href="{{ url_for('workbench.settings') }}?opt=erease_sectors" class="btn btn-primary" style="width: 100%">Download settings file</a>
                 </div>
               </div>
             </div>
@@ -183,20 +180,76 @@
         <div class="card-body">
 
           <div class="pt-8 pb-2">
-            <h5 class="card-title pb-0 fs-4">Erasure hard-drive</h5>
+            <h5 class="card-title pb-0 fs-4">Usody Erasure Snapshots</h5>
 
             <div class="row">
-              <div class="col-5">
+              <div class="col-2">
                 <a href="" class="btn btn-primary" style="width: 200px;">Download ISO</a>
               </div>
-              <div class="col">
+              <div class="col-3">
                 <p class="small">
                   Download Checksum: <a class="help" href="SHA512SUM">SHA512SUM</a> |
                   <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a></p>
                 </p>
               </div>
+              <div class="col"></div>
             </div>
 
+            <div class="row mt-3">
+              <div class="col-3">
+                <div class="border mr-2 p-2">
+                  <p>
+                    Settings for basic data erasure using shred fast non-100% secured way of erasing data storage.
+                  </p>
+                  <p>
+                    One overwriting round using a randomn pattern.
+                    Compliant with British HMG Infosec Standard 5,
+                    Baseline Standard
+                  </p>              
+                  <a href="{{ url_for('workbench.settings') }}?opt=erease_basic" 
+                  class="btn btn-primary" 
+                  style="width: 100%;">
+                  Download settings file
+                  </a>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="border mr-2 p-2">
+                  <p>
+                    Settings for basic data erasure using shred fast non-100% secured way of erasing data storage.
+                  </p>  
+                  <p>
+                    Settings for basic data erasure using shred fast non-100% secured way of erasing data storage.
+                  </p>
+                  <p>
+                    One overwriting round using a randomn pattern.
+                    Compliant with British HMG Infosec Standard 5,
+                    Baseline Standard
+                  </p>
+                  <a href="{{ url_for('workbench.settings') }}?opt=erease_basic" class="align-bottom btn btn-primary" style="width: 100%">Download settings file</a>
+                </div>
+              </div>
+            </div>
+            <!--
+            <table class="">
+              <tr>
+                <td class="border">
+                  <table style="height: 100%;" class="border bg-primary">
+                  <tr class="align-top">
+                    <td>
+
+                    </td>
+                  </tr>
+                  <tr class="align-bottom">
+                    <td>
+                    </td>
+                  </tr>
+                  </table>
+                </td>
+                <td class="border">
+                </td>
+              </tr>
+            </table>
             <div class="row mt-3 d-table">
               <div class="col-4 border d-table-cell">
                 <div class="row d-table-cell">
@@ -256,6 +309,7 @@
                 </div>
               </div>
             </div>
+            -->
 
           </div>
 
