--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -357,7 +357,7 @@
                   </thead>
                   <tbody>
                     {% for dev in devices %}
-                    {% if not dev.parent_id or dev.parent.placeholder.kangaroo %}
+                    {% if dev.placeholder and (not dev.parent_id or dev.parent.placeholder.kangaroo) %}
                     <tr>
                       <td>
                           <input type="checkbox" class="deviceSelect" data="{{ dev.id }}"
