add version of isos

--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -95,7 +95,7 @@
         <div class="card-body">
 
           <div class="pt-6 pb-2">
-            <h5 class="card-title pb-0 fs-4">Usody Metadata Snapshots</h5>
+            <h5 class="card-title pb-0 fs-4">Usody Hardware Metadata 2022</h5>
             <p class="mb-5">
               A certified collection of hardware details and testing reports<br />
               <small>Desktops, Servers and Laptops</small>
@@ -139,7 +139,7 @@
         <div class="card-body">
 
           <div class="pt-8 pb-2">
-            <h5 class="card-title pb-0 fs-4">Usody Erasure Snapshots</h5>
+            <h5 class="card-title pb-0 fs-4">Usody Data Erasure v14</h5>
             <p class="mb-5">
               A certified data erasure software to irreversibly removing data sored on hard drives.<br />
               <small>Desktops, Servers and Laptops</small>
