change snapshot id for snapshot uuid

--- a/ereuse_devicehub/templates/inventory/snapshots_list.html
+++ b/ereuse_devicehub/templates/inventory/snapshots_list.html
@@ -26,7 +26,7 @@
                   <thead>
                     <tr>
                       <th scope="col">SID</th>
-                      <th scope="col">Snapshot id</th>
+                      <th scope="col">Snapshot UUID</th>
                       <th scope="col">Version</th>
                       <th scope="col">DHID</th>
                       <th scope="col">System UUID</th>
