pass emails to templates

--- a/ereuse_devicehub/templates/ereuse_devicehub/user_registration.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_registration.html
@@ -91,7 +91,7 @@
                   </div>
                   <div class="col-12">
                     <p class="small mb-0">
-                      You have account? <a href="{{ url_for('core.login') }}">Create an account</a>
+                      You have account? <a href="{{ url_for('core.login') }}">do Login</a>
                     </p>
                   </div>
                 </form>
