--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -191,7 +191,7 @@
                     Performs <strong>1</strong> pass overwriting each sector with zeros and a final verification.
                     Compliant with <strong>HMG Infosec Standard 5 Baseline</strong>.
                   </p>              
-                  <a href="{{ url_for('workbench.settings') }}?opt=erease_sectors" 
+                  <a href="{{ url_for('workbench.settings') }}?opt=baseline_erease"
                   class="btn btn-primary" 
                   style="width: 100%;">
                   Download settings file
@@ -210,11 +210,11 @@
                     Performs <strong>3</strong> passes overwriting every sector with zeros and ones, and final verification.
                     Compliant with <strong>HMG Infosec Standard 5 Enhanced</strong>.
                   </p>           
-                  <span 
-                  class="btn btn-secondary" 
+                  <a href="{{ url_for('workbench.settings') }}?opt=enhanced_erease"
+                  class="btn btn-primary" 
                   style="width: 100%;">
                   Download settings file
-                  </span>
+                  </a>
                 </div>
               </div>
             </div>
