--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -302,11 +302,12 @@
     &copy; Copyright <strong><span>Usody</span></strong>. All Rights Reserved
   </div>
   <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> // DeviceHub {{ version }}
+    <a href="https://help.usody.com/en/" target="_blank">Help</a> | 
+    <a href="https://pangea.org/es/politica-de-privacidad/" target="_blank">Privacy</a> | 
+    <a href="https://pangea.org/aviso-legal/" target="_blank">Terms</a>
+  </div>
+  <div class="credits">
+    DeviceHub {{ version }}
   </div>
 </footer><!-- End Footer -->
 
